# devdocs-indexer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  store.py
scripts/: crawl.py  full_pipeline.py
src/: __init__.py
src/config/: frameworks.yaml  settings.py
src/core/: __init__.py  crawler.py  embedder.py  indexer.py  parser.py
src/scrapers/: __init__.py  base.py  django.py  fastapi.py  nextjs.py  postgresql.py  react.py  tailwind.py  typescript.py
src/utils/: __init__.py  chunker.py  crawl.py  hash.py  logger.py  markdown.py
tests/: __init__.py  conftest.py  test_chunker.py  test_hash.py  test_markdown.py  test_setup.py
